# rustdavinci

./: .editorconfig  .gitignore  build_script.py  pyproject.toml
rustdavinci/: app.py  app.pyw
rustdavinci/lib/: captureArea.py  color_functions.py  rustDaVinci.py  rustPaletteData.py
rustdavinci/ui/dialogs/: captureDialog.py
rustdavinci/ui/dialogs/click_color/: click_color.py  click_colorui.py  convert_ui.py
rustdavinci/ui/dialogs/colors/: colors.py  colorsui.py  convert_ui.py
rustdavinci/ui/dialogs/preview/: preview.py  previewui.py  previewui.ui
rustdavinci/ui/resources/: convert_qrc.py
rustdavinci/ui/settings/: convert_ui.py  settings.py  settingsui.py
rustdavinci/ui/views/: convert_ui.py  main.py  mainui.py
